# ram-irq-handlers

./: .clang-format  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  config.hpp  irq_holder.hpp  irq_holder_fixed.hpp  irq_provider.hpp  irq_singleton_holder.hpp  isr_provider.hpp  main.cpp  multi_irq_holder.hpp  multi_irq_holder_fixed.hpp
examples/singleton/: singleton.hpp
examples/vectors/: vectors.c  vectors.h
irq/: CMakeLists.txt  irq.hpp  vectors.c  vectors.h
irq/ports/: opencm3.hpp
singleton/: non_copyable.hpp  non_movable.hpp  singleton.hpp
src/ramisr/: isr.hpp
src/ramisr/ports/: opencm3.hpp
